--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "cohere-ai": "^7.14.0",
     "framer-motion": "^11.11.11",
     "next": "15.0.3",
     "react": "^18.3.1",
