--- a/app/manifest.json
+++ b/app/manifest.json
@@ -3,7 +3,7 @@
     "theme_color": "#000",
     "background_color": "#fff8e1",
     "display": "standalone",
-    "orientation": "landscape",
+    "orientation": "portrait",
     "scope": "/",
     "start_url": "/",
     "icons": [
